Finish parametric NMA

--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -4,7 +4,7 @@
 
         \vspace*{1.5cm}
 
-        \textbf{\huge On Parametric and Non-Parametric Techniques for Modelling Survival in Pancreatic Cancer Trials} 
+        \textbf{\huge A Netowrk Meta Analysis of Treatments for Advanced Pancreatic Cancer Using Parametric and Non-Parametric Survival Models} 
         
         \vspace*{1.5cm}
         
