--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -101,7 +101,7 @@ colbacktitle=yellow!75!black,fonttitle=\bfseries}{re}
 %\includepdf{toMom.pdf}
 
 \section*{Abstract}
-An investigation into improving the computational efficiency of Network Meta Analyses is presented.
+Five treatments for advanced pancreatic cancer were compared against the standard of care treatment in two network meta analyses. The first network meta analysis used parametric survival models, and the second used fractional polynomials. The parametric model results showed only one treatment gave improvements on the standard of care, but little to no improvements were found in overall survival. 
 
 \section*{Acknowledgements}
 I would like to thank Dr Kate Ren for her invaluable supervision throughout this project. In addition, to my colleagues at OPEN Health who I have learnt so much from, and am continually inspired by.  
@@ -150,6 +150,8 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
 \input{Chapters/survAppendix.tex}
 
 \input{Chapters/survResultsAppendix.tex}
+
+\input{Chapters/nmaResultsAppendix.tex}
 
 \input{Chapters/packageDev.tex}
 
