--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -92,6 +92,8 @@ colbacktitle=yellow!75!black,fonttitle=\bfseries}{re}
 
 \lstset{style=mystyle}
 
+\setcounter{secnumdepth}{4}
+
 \begin{document}
 
 \input{titlepage}
@@ -148,6 +150,8 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
 \input{Chapters/survAppendix.tex}
 
 \input{Chapters/survResultsAppendix.tex}
+
+\input{Chapters/median_nma_results.tex}
 
 \input{Chapters/nmaResultsAppendix.tex}
 
