bring up to date

--- a/Proposal/main.tex
+++ b/Proposal/main.tex
@@ -1,3 +1,23 @@
 \documentclass[11pt]{amsart}
 \usepackage[utf8]{inputenc}
 \usepackage[a4paper, total={6in,8in}, portrait, margin=1in]{geometry}
+
+\title{A Network Meta-Analysis of Chemotherapy in Pancreatic Cancer}
+\date{May 2024}
+\author{Matthew Knowles}
+ 
+\begin{document}
+
+\maketitle
+
+\begin{abstract}
+    Pancreatic cancer is the $10^{th}$ most prevelant cancer in the UK. It has a poor prognosis 
+\end{abstract}
+
+\section{Introduction}
+The aim of this projeect is to assess the comparative efficacy of Gemicitabine (GEM) in combination with five other chemotherapy combinations in the treatment of metastatic/advanced pancreatic cancer.
+
+\section{Data}
+Five studies presenting Kaplan-Meier curves for trials of GEM versus another comparator were digitized using WebPlotDigitizer to obtain reconstructed individual patient-level data (IPD).
+
+\end{document}
