--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -126,7 +126,7 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
 
 \input{Chapters/Surv.tex}
 
-\input{Chapters/FP.tex}
+%\input{Chapters/FP.tex}
 
 \input{Chapters/NMA_New.tex}
 
