--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -234,3 +234,10 @@
   year={2004},
   publisher={American Society of Clinical Oncology}
 }
+
+@article{phillippo2024,
+  title={Multilevel network meta-regression for general likelihoods: synthesis of individual and aggregate data with applications to survival analysis},
+  author={Phillippo, David M and Dias, Sofia and Welton, Nicky J and Ades, AE},
+  journal={arXiv preprint arXiv:2401.12640},
+  year={2024}
+}
