--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -241,3 +241,13 @@
   journal={arXiv preprint arXiv:2401.12640},
   year={2024}
 }
+
+@article{gresham2014,
+  title={Chemotherapy regimens for advanced pancreatic cancer: a systematic review and network meta-analysis},
+  author={Gresham, Gillian K and Wells, George A and Gill, Sharlene and Cameron, Christopher and Jonker, Derek J},
+  journal={BMC cancer},
+  volume={14},
+  pages={1--13},
+  year={2014},
+  publisher={Springer}
+}
