--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -4,7 +4,7 @@
 
         \vspace*{1.5cm}
 
-        \textbf{\huge A Netowrk Meta Analysis of Treatments for Advanced Pancreatic Cancer Using Parametric and Non-Parametric Survival Models} 
+        \textbf{\huge A Netowrk Meta Analysis of Treatments for Advanced/Metastatic Pancreatic Cancer } 
         
         \vspace*{1.5cm}
         
