--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -30,6 +30,8 @@
 \usepackage{svg}
 \usepackage{chemformula}
 \usepackage{fontspec, arabxetex}
+%\usepackage{lscape}
+\usepackage{pdflscape}
 \pagestyle{fancy}
 \usepackage[Bjarne]{fncychap}
 \usepackage{tcolorbox}
@@ -103,7 +105,7 @@ colbacktitle=yellow!75!black,fonttitle=\bfseries}{re}
 %\includepdf{toMom.pdf}
 
 \section*{Abstract}
-Do this last!
+Gemcitabine (GEM) in combination with nab-paclitaxel (NAB) or capecitabine (CAP) provides improved median OS and restricted mean survival time (RMST) estimates for the the treatment of advance/metastatic pancreatic cancer. 
 
 \section*{Acknowledgements}
 I would like to thank Dr Kate Ren for her invaluable supervision throughout this project. In addition, to my colleagues at OPEN Health who I have learnt so much from, and am continually inspired by.  
@@ -143,6 +145,8 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
 \appendixpage
 
 \input{Chapters/Surv_Results_Appendix.tex}
+
+\input{Chapters/NMA_Results_Appendix.tex}
 
 \input{Chapters/packageDev.tex}
 
