just need to polish methods

--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -251,3 +251,36 @@
   year={2014},
   publisher={Springer}
 }
+
+@article{goldstein2015,
+  title={nab-Paclitaxel plus gemcitabine for metastatic pancreatic cancer: long-term survival from a phase III trial},
+  author={Goldstein, David and El-Maraghi, Robert Hassan and Hammel, Pascal and Heinemann, Volker and Kunzmann, Volker and Sastre, Javier and Scheithauer, Werner and Siena, Salvatore and Tabernero, Josep and Teixeira, Luis and others},
+  journal={Journal of the National Cancer Institute},
+  volume={107},
+  number={2},
+  pages={dju413},
+  year={2015},
+  publisher={Oxford University Press US}
+}
+
+@article{gonccalves2012,
+  title={BAYPAN study: a double-blind phase III randomized trial comparing gemcitabine plus sorafenib and gemcitabine plus placebo in patients with advanced pancreatic cancer},
+  author={Gon{\c{c}}alves, A and Gilabert, M and Fran{\c{c}}ois, E and Dahan, L and Perrier, H and Lamy, R and Re, D and Largillier, R and Gasmi, M and Tchiknavorian, X and others},
+  journal={Annals of oncology},
+  volume={23},
+  number={11},
+  pages={2799--2805},
+  year={2012},
+  publisher={Elsevier}
+}
+
+@article{spano2008,
+  title={Efficacy of gemcitabine plus axitinib compared with gemcitabine alone in patients with advanced pancreatic cancer: an open-label randomised phase II study},
+  author={Spano, Jean-Philippe and Chodkiewicz, Catherine and Maurel, Joan and Wong, Ralph and Wasan, Harpreet and Barone, Carlo and L{\'e}tourneau, Richard and Bajetta, Emilio and Pithavala, Yazdi and Bycott, Paul and others},
+  journal={The Lancet},
+  volume={371},
+  number={9630},
+  pages={2101--2108},
+  year={2008},
+  publisher={Elsevier}
+}
