--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -28,6 +28,7 @@
 \usepackage{epigraph}
 \usepackage{dsfont}
 \usepackage{svg}
+\usepackage{bibleref}
 \usepackage{chemformula}
 \usepackage{fontspec, arabxetex}
 %\usepackage{lscape}
@@ -105,16 +106,18 @@ colbacktitle=yellow!75!black,fonttitle=\bfseries}{re}
 %\includepdf{toMom.pdf}
 
 \section*{Abstract}
-Gemcitabine (GEM) in combination with nab-paclitaxel (NAB) or capecitabine (CAP) provides improved median OS and restricted mean survival time (RMST) estimates for the the treatment of advance/metastatic pancreatic cancer. 
+Gemcitabine (GEM) in combination with nab-paclitaxel (NAB) or capecitabine (CAP) provides improved median OS and restricted mean survival time (RMST) estimates for the the treatment of advance/metastatic pancreatic cancer comared to GEM monotherapy. 
 
 \section*{Acknowledgements}
-I would like to thank Dr Kate Ren for her invaluable supervision throughout this project. In addition, to my colleagues at OPEN Health who I have learnt so much from, and am continually inspired by. 
+I would like to thank Dr Kate Ren for her invaluable supervision throughout this project. In addition, to my colleagues at OPEN Health who I have learnt so much from, and am continually inspired by. Thank you to my friends and family for putting up with me talking about network meta analysis for the past two years.
 
 \clearpage
 \begin{center}
   \thispagestyle{empty}
   \vspace*{\fill}
-  For my late grandfather, Norman Fredrick Taylor (July 1943 - April 2015).
+  For my late grandfather, Norman Fredrick Taylor (July 1943 - April 2015).\\
+  \includegraphics[width = \textwidth]{../figures/gumpy.jpeg}\\
+  ``But they that wait upon the Lord shall renew their strength; they shall mount up with wings as eagles; they shall run, and not be weary; and they shall walk, and not faint.'' \bibleverse{Isaiah}(40:31)
   \vspace*{\fill}
 \end{center}
 
