--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -63,7 +63,7 @@
 }
 
 @article{NG85,
-  author = {National Institute for Health and Clinical Excellence},
+  author = {{National Institute for Health and Clinical Excellence}},
   title = {Pancreatic cancer in adults: diagnosis and mangement},
   year = {2018}
 }
@@ -283,4 +283,13 @@
   pages={2101--2108},
   year={2008},
   publisher={Elsevier}
+}
+
+@Manual{multinma,
+  title = {multinma: Bayesian Network Meta-Analysis of Individual and Aggregate Data},
+  author = {David M. Phillippo},
+  year = {2023},
+  note = {R package version 0.7.1},
+  url = {https://dmphillippo.github.io/multinma/},
+  doi = {10.5281/zenodo.3904454},
 }
