--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -63,9 +63,19 @@
 }
 
 @article{NG85,
-  author = {{National Institute for Health and Clinical Excellence}},
-  title = {Pancreatic cancer in adults: diagnosis and mangement},
-  year = {2018}
+  author       = {{National Institute for Health and Care Excellence}},
+  howpublished = {online},
+  title        = {Pancreatic cancer in adults: diagnosis and management},
+  year         = {2018},
+  url          = {https://www.nice.org.uk/guidance/ng85}
+}
+
+@article{TA476,
+  author       = {{National Institute for Health and Care Excellence}},
+  howpublished = {online},
+  title        = {Paclitaxel as albumin-bound nanoparticles with gemcitabine for untreated metastatic pancreatic cancer},
+  year         = {2017},
+  url          = {https://www.nice.org.uk/guidance/ta476/}
 }
 
 @article{flexsurv,
@@ -292,4 +302,71 @@
   note = {R package version 0.7.1},
   url = {https://dmphillippo.github.io/multinma/},
   doi = {10.5281/zenodo.3904454},
+}
+
+@Article{simsurv,
+  title = {Simulating Survival Data Using the {simsurv} {R} Package},
+  author = {Samuel L. Brilleman and Rory Wolfe and Margarita
+    Moreno-Betancur and Michael J. Crowther},
+  journal = {Journal of Statistical Software},
+  year = {2020},
+  volume = {97},
+  number = {3},
+  pages = {1--27},
+  doi = {10.18637/jss.v097.i03},
+}
+
+@Misc{loo,
+  title = {loo: Efficient leave-one-out cross-validation and WAIC for
+    Bayesian models},
+  author = {Aki Vehtari and Jonah Gabry and Mans Magnusson and Yuling
+    Yao and Paul-Christian Bürkner and Topi Paananen and Andrew
+    Gelman},
+  year = {2024},
+  note = {R package version 2.7.0},
+  url = {https://mc-stan.org/loo/},
+}
+
+@article{sobol,
+  title={On the distribution of points in a cube and the approximate evaluation of integrals},
+  author={Sobol', Il'ya Meerovich},
+  journal={Zhurnal Vychislitel'noi Matematiki i Matematicheskoi Fiziki},
+  volume={7},
+  number={4},
+  pages={784--802},
+  year={1967},
+  publisher={Russian Academy of Sciences, Branch of Mathematical Sciences}
+}
+
+@article{phillippo2020,
+  title={Multilevel network meta-regression for population-adjusted treatment comparisons},
+  author={Phillippo, David M and Dias, Sofia and Ades, AE and Belger, Mark and Brnabic, Alan and Schacht, Alexander and Saure, Daniel and Kadziola, Zbigniew and Welton, Nicky J},
+  journal={Journal of the Royal Statistical Society Series A: Statistics in Society},
+  volume={183},
+  number={3},
+  pages={1189--1210},
+  year={2020},
+  publisher={Oxford University Press}
+}
+
+@article{conroy,
+  title={FOLFIRINOX versus gemcitabine for metastatic pancreatic cancer},
+  author={Conroy, Thierry and Desseigne, Fran{\c{c}}oise and Ychou, Marc and Bouch{\'e}, Olivier and Guimbaud, Rosine and B{\'e}couarn, Yves and Adenis, Antoine and Raoul, Jean-Luc and Gourgou-Bourgade, Sophie and De La Fouchardi{\`e}re, Christelle and others},
+  journal={New England journal of medicine},
+  volume={364},
+  number={19},
+  pages={1817--1825},
+  year={2011},
+  publisher={Mass Medical Soc}
+}
+
+@article{jansengp,
+  title={Indirect treatment comparison/network meta-analysis study questionnaire to assess relevance and credibility to inform health care decision making: an ISPOR-AMCP-NPC Good Practice Task Force report},
+  author={Jansen, Jeroen P and Trikalinos, Thomas and Cappelleri, Joseph C and Daw, Jessica and Andes, Sherry and Eldessouki, Randa and Salanti, Georgia},
+  journal={Value in Health},
+  volume={17},
+  number={2},
+  pages={157--173},
+  year={2014},
+  publisher={Elsevier}
 }
