--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -8,7 +8,7 @@
         
         \vspace*{1.5cm}
         
-        \textit{Matthew Knowles}
+        \textit{Matthew Connor Knowles}
 
         \vspace*{1.5cm}
     
@@ -17,12 +17,18 @@
         \vspace*{1.5cm}
         
         School of Health and Related Research, \\
-        University of Sheffield, \\
+        The University of Sheffield, \\
         United Kingdom \\
 
         \vspace*{0.5cm}
 
-        Supervisor: Dr. Kate Ren
+        Supervisor: Dr. Kate Ren \\
+
+        Septermber 2024 \\
+
+        Word Count: \\
+
+        60 Credits \\
         
         \vspace*{1.5cm}
 
