--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -370,3 +370,67 @@
   year={2014},
   publisher={Elsevier}
 }
+
+@article{vehtari,
+  title={Practical Bayesian model evaluation using leave-one-out cross-validation and WAIC},
+  author={Vehtari, Aki and Gelman, Andrew and Gabry, Jonah},
+  journal={Statistics and computing},
+  volume={27},
+  pages={1413--1432},
+  year={2017},
+  publisher={Springer}
+}
+
+@article{takumoto,
+  title={Comparative outcomes of first-line chemotherapy for metastatic pancreatic cancer among the regimens used in Japan: a systematic review and network meta-analysis},
+  author={Takumoto, Yuki and Sasahara, Yuriko and Narimatsu, Hiroto and Akazawa, Manabu},
+  journal={JAMA Network Open},
+  volume={5},
+  number={1},
+  pages={e2145515--e2145515},
+  year={2022},
+  publisher={American Medical Association}
+}
+
+@article{zhang,
+  title={Efficacy of different chemotherapy regimens in treatment of advanced or metastatic pancreatic cancer: a network meta-analysis},
+  author={Zhang, Shu-Hua and Liu, Gui-Feng and Li, Xue-Feng and Liu, Lin and Yu, Shao-Nan},
+  journal={Journal of Cellular Physiology},
+  volume={233},
+  number={4},
+  pages={3352--3374},
+  year={2018},
+  publisher={Wiley Online Library}
+}
+
+@article{nichetti,
+  title={NALIRIFOX, FOLFIRINOX, and gemcitabine with nab-paclitaxel as first-line chemotherapy for metastatic pancreatic cancer: a systematic review and meta-analysis},
+  author={Nichetti, Federico and Rota, Simone and Ambrosini, Paolo and Pircher, Chiara and Gusmaroli, Eleonora and Busset, Michele Droz Dit and Pusceddu, Sara and Sposito, Carlo and Coppa, Jorgelina and Morano, Federica and others},
+  journal={JAMA Network Open},
+  volume={7},
+  number={1},
+  pages={e2350756--e2350756},
+  year={2024},
+  publisher={American Medical Association}
+}
+
+@article{lin,
+  title={Network meta-analysis of efficacy and safety of chemotherapy and target therapy in the first-line setting of advanced pancreatic cancer},
+  author={Lin, Kun-I and Yang, Jia-Lian and Lin, Yu-Chao and Chou, Che-Yi and Chen, Jin-Hua and Hung, Chin-Chuan},
+  journal={Cancers},
+  volume={11},
+  number={11},
+  pages={1746},
+  year={2019},
+  publisher={MDPI}
+}
+
+@article{chen,
+  title={Meta-analysis and indirect treatment comparison of modified FOLFIRINOX and gemcitabine plus nab-paclitaxel as first-line chemotherapy in advanced pancreatic cancer},
+  author={Chen, Jiayuan and Hua, Qingling and Wang, Haihong and Zhang, Dejun and Zhao, Lei and Yu, Dandan and Pi, Guoliang and Zhang, Tao and Lin, Zhenyu},
+  journal={BMC cancer},
+  volume={21},
+  pages={1--9},
+  year={2021},
+  publisher={Springer}
+}
