--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -136,6 +136,8 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
 
 \input{Chapters/Trials.tex}
 
+\input{Chapters/NMA_Literature.tex}
+
 \input{Chapters/nma_analysis.tex}
 
 \input{Chapters/conclusions.tex}
@@ -146,9 +148,9 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
 \appendix
 \appendixpage
 
-\input{Chapters/defs.tex}
-
 \input{Chapters/NMA_Results_Appendix.tex}
+
+\input{Chapters/IPSORGP.tex}
 
 \input{Chapters/packageDev.tex}
 
