--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -434,3 +434,86 @@
   year={2021},
   publisher={Springer}
 }
+
+@article{matsumoto,
+  title={FOLFIRINOX for advanced pancreatic cancer patients after nab-paclitaxel plus gemcitabine failure},
+  author={Matsumoto, Toshihiko and Kurioka, Yusuke and Okazaki, Ukyo and Matsuo, Yu and Kimura, Shogo and Miura, Kou and Tsuduki, Takao and Takagi, Shinjiro and Takatani, Masahiro and Morishita, Hirofumi},
+  journal={Pancreas},
+  volume={49},
+  number={4},
+  pages={574--578},
+  year={2020},
+  publisher={LWW}
+}
+
+@article{chung,
+  title={Multicenter phase II trial of modified FOLFIRINOX in gemcitabine-refractory pancreatic cancer},
+  author={Chung, Moon Jae and Kang, Huapyong and Kim, Ho Gak and Hyun, Jong Jin and Lee, Jun Kyu and Lee, Kwang Hyuck and Noh, Myung Hwan and Kang, Dae Hwan and Lee, Sang Hyub and Bang, Seungmin and others},
+  journal={World journal of gastrointestinal oncology},
+  volume={10},
+  number={12},
+  pages={505},
+  year={2018},
+  publisher={Baishideng Publishing Group Inc}
+}
+
+@article{dimagno,
+  title={Pancreatic cancer: clinical presentation, pitfalls and early clues},
+  author={Dimagno, Eugene P},
+  journal={Annals of oncology},
+  volume={10},
+  pages={S140--S142},
+  year={1999},
+  publisher={Elsevier}
+}
+
+@article{ingram,
+  title={Cost-effectiveness of neoadjuvant FOLFIRINOX versus gemcitabine plus nab-paclitaxel in borderline resectable/locally advanced pancreatic cancer patients},
+  author={Ingram, Myles A and Lauren, Brianna N and Pumpalova, Yoanna and Park, Jiheum and Lim, Francesca and Bates, Susan E and Kastrinos, Fay and Manji, Gulam A and Kong, Chung Yin and Hur, Chin},
+  journal={Cancer Reports},
+  volume={5},
+  number={9},
+  pages={e1565},
+  year={2022},
+  publisher={Wiley Online Library}
+}
+
+@article{kharat,
+  title={Cost-effectiveness analysis of FOLFIRINOX vs gemcitabine with nab-paclitaxel as adjuvant treatment for resected pancreatic cancer in the United States based on PRODIGE-24 and APACT trials},
+  author={Kharat, Aditi A and Nelson, Richard and Au, Trang and Biskupiak, Joseph},
+  journal={Journal of Managed Care \& Specialty Pharmacy},
+  volume={27},
+  number={10},
+  pages={1367--1375},
+  year={2021},
+  publisher={Academy of Managed Care Pharmacy}
+}
+
+@article{TA25,
+  author       = {{National Institute for Health and Care Excellence}},
+  howpublished = {online},
+  title        = {Guidance on the use of gemcitabine for the treatment of pancreatic cancer},
+  year         = {2017},
+  url          = {https://www.nice.org.uk/guidance/ta25/}
+}
+
+@article{pishvaian,
+  title={Therapeutic Implications of Molecular Subtyping for Pancreatic Cancer.},
+  author={Pishvaian, Michael J and Brody, Jonathan R},
+  journal={Oncology (Williston Park, NY)},
+  volume={31},
+  number={3},
+  pages={159--66},
+  year={2017}
+}
+
+@book{neoptolemos,
+  title={Pancreatic Cancer},
+  author={Neoptolemos, J.P. and Urrutia, R.A. and Abbruzzese, J. and B{\"u}chler, M.W.},
+  isbn={9780387774978},
+  lccn={2009937021},
+  series={2010 Springer E-Books},
+  url={https://books.google.co.uk/books?id=NmBB5ZoKkk4C},
+  year={2010},
+  publisher={Springer}
+}
