--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -107,7 +107,7 @@ colbacktitle=yellow!75!black,fonttitle=\bfseries}{re}
 %\includepdf{toMom.pdf}
 
 \section*{Abstract}
-A modified Multilevel Network Meta-Regression (ML-NMR) was performed on data from eight studies comparing Gemcitabine (GEM) with six combination therapies and one standalone therapy. The comparative efficacy of the combination therapies was assessed in terms of the median overall survival (OS) and restricted mean survival time (RMST) estimates. GEM in combination with nab-paclitaxel (NAB) or capecitabine (CAP) provides improved median OS and RMST estimates for the treatment of advanced/metastatic pancreatic cancer compared to GEM monotherapy.
+A modified Multilevel Network Meta-Regression (ML-NMR) was performed on data from eight studies comparing gemcitabine (GEM) with six combination therapies and one standalone therapy. The comparative efficacy of the combination therapies was assessed in terms of the median overall survival (OS) and restricted mean survival time (RMST) estimates. FOLFIRINOX provides improved median OS and RMST estimates for the treatment of advanced/metastatic pancreatic cancer compared to GEM monotherapy. GEM in combination with nab-paclitaxel (GEM-NAB) also provides improved median OS and RMST compared to GEM and other treatments.
 
 \section*{Acknowledgements}
 I would like to thank Dr Kate Ren for her invaluable supervision throughout this project. In addition, to my colleagues at OPEN Health who I have learnt so much from, and am continually inspired by. Finally, thank you to my friends and family for putting up with me talking about network meta analysis for the past two years.
