add more on model convergence

--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -517,3 +517,11 @@
   year={2010},
   publisher={Springer}
 }
+
+@Misc{bayesplot,
+  title = {bayesplot: Plotting for Bayesian Models},
+  author = {Jonah Gabry and Tristan Mahr},
+  year = {2024},
+  note = {R package version 1.11.1},
+  url = {https://mc-stan.org/bayesplot/},
+  }
