--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -4,7 +4,7 @@
 
         \vspace*{1.5cm}
 
-        \textbf{\huge A Network Meta Analysis of Treatments for Advanced/Metastatic Pancreatic Cancer } 
+        \textbf{\huge A Network Meta Analysis of Treatments for Locally Advanced/Metastatic Pancreatic Cancer } 
         
         \vspace*{1.5cm}
         
@@ -26,7 +26,7 @@
 
         Septermber 2024 \\
 
-        Word Count: 10064\\
+        Word Count: 10757\\
 
         60 Credits \\
         
