finish first draft

--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -525,3 +525,40 @@
   note = {R package version 1.11.1},
   url = {https://mc-stan.org/bayesplot/},
   }
+
+@article{ding,
+  title={Model selection techniques: An overview},
+  author={Ding, Jie and Tarokh, Vahid and Yang, Yuhong},
+  journal={IEEE Signal Processing Magazine},
+  volume={35},
+  number={6},
+  pages={16--34},
+  year={2018},
+  publisher={IEEE}
+}
+
+@article{akaike,
+  title={A new look at the statistical model identification},
+  author={Akaike, Hirotugu},
+  journal={IEEE transactions on automatic control},
+  volume={19},
+  number={6},
+  pages={716--723},
+  year={1974},
+  publisher={Ieee}
+}
+
+@article{schwarz,
+  title={Estimating the dimension of a model},
+  author={Schwarz, Gideon},
+  journal={The annals of statistics},
+  pages={461--464},
+  year={1978},
+  publisher={JSTOR}
+}
+
+@misc{mbuag,
+  title={Approaches to interpreting and choosing the best treatments in network meta-analyses. Syst Rev 2017; 6: 79},
+  author={Mbuagbaw, L and Rochwerg, B and Jaeschke, R and Heels-Andsell, D and Alhazzani, W and Thabane, L and Guyatt, GH},
+  publisher={PUBMED}
+}
