post-finish update

--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -2,6 +2,15 @@
 %\documentclass[working]{tufte-book}
 \usepackage[utf8]{inputenc}
 \usepackage[a4paper, total={6in,8in}, portrait, margin=1in]{geometry}
+\usepackage{xcolor}
+\definecolor{refgreen}{HTML}{7EBE91}   
+\definecolor{refblue}{HTML}{7EABBE}     
+\definecolor{refred}{HTML}{8B0000}
+\usepackage[
+    colorlinks,
+    linkcolor=refred,
+    citecolor=refgreen,    
+]{hyperref}
 \usepackage{rotating}
 \usepackage{amssymb}
 \usepackage{array}
@@ -12,7 +21,6 @@
 \usepackage{float}
 \usepackage{mathtools}
 \usepackage{listings}
-\usepackage{xcolor}
 \usepackage[misc]{ifsym}
 \usepackage{indentfirst} 
 \usepackage{amsthm}
