proofread first three chapters

--- a/Thesis/refs.bib
+++ b/Thesis/refs.bib
@@ -562,3 +562,14 @@
   author={Mbuagbaw, L and Rochwerg, B and Jaeschke, R and Heels-Andsell, D and Alhazzani, W and Thabane, L and Guyatt, GH},
   publisher={PUBMED}
 }
+
+@article{hryciuk,
+  title={Severe acute toxicity following gemcitabine administration: A report of four cases with cytidine deaminase polymorphisms evaluation},
+  author={Hryciuk, Beata and Szymanowski, Bartosz and Romanowska, Anna and Salt, Ewa and Was{\k{a}}g, Bartosz and Grala, Bart{\l}omiej and Jassem, Jacek and Duchnowska, Renata},
+  journal={Oncology Letters},
+  volume={15},
+  number={2},
+  pages={1912--1916},
+  year={2018},
+  publisher={Spandidos Publications}
+}
