--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -159,6 +159,8 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
 \appendix
 \appendixpage
 
+\includepdf[pages=-]{Chapters/Approval_Letter.pdf}
+
 \input{Chapters/NMA_Results_Appendix.tex}
 
 \input{Chapters/IPSORGP.tex}
