proofread first three chapters

--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -8,8 +8,8 @@
 \definecolor{refred}{HTML}{8B0000}
 \usepackage[
     colorlinks,
-    linkcolor=refred,
-    citecolor=refgreen,    
+    linkcolor=black,
+    citecolor=black,    
 ]{hyperref}
 \usepackage{rotating}
 \usepackage{amssymb}
