fix two typos and change FOLFIRINOX to FOL

--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -118,7 +118,7 @@ colbacktitle=yellow!75!black,fonttitle=\bfseries}{re}
 
 \section*{Abstract}
 A Multilevel Network Meta-Regression (ML-NMR) was performed on data from eight studies comparing gemcitabine (GEM) with six combination therapies and one standalone therapy. The comparative efficacy of the combination therapies was assessed in terms of the median overall survival (OS) and restricted mean survival time (RMST) estimates. FOLFIRINOX provides improved median OS and RMST estimates for the treatment of advanced/metastatic pancreatic cancer compared to GEM monotherapy. GEM in combination with nab-paclitaxel (GEM-NAB) also provides improved median OS and RMST compared to GEM and other treatments. 
-A brief literature review was conducted to validate the results of this ML-NMR. A ML-NMR has not previously been conducted for treatments of pancreatic cancer, but the results aligned with the results of the other meta-analyses found in the literature review. This dissertation showed the suitability of the ML-NMR method for use in pancreatic cancer, but lacked individual patient-level data (IPD), which extensive adjustment of covariates was not possible.
+A brief literature review was conducted to validate the results of this ML-NMR. A ML-NMR has not previously been conducted for treatments of pancreatic cancer, but the results aligned with the results of the other meta-analyses found in the literature review. This dissertation showed the suitability of the ML-NMR method for use in pancreatic cancer, but lacked real individual patient-level data (IPD) meaning extensive adjustment of covariates was not possible.
 
 \section*{Acknowledgements}
 I would like to thank Dr Kate Ren for her invaluable supervision throughout this project. In addition, to my colleagues at OPEN Health who I have learnt so much from, and am continually inspired by. Finally, thank you to my friends and family for putting up with me talking about network meta analysis for the past two years.
