Updates for review

--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -128,7 +128,7 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
   \thispagestyle{empty}
   \vspace*{\fill}
   For my late grandfather, Norman Fredrick Taylor (July 1943 - April 2015).\\
-  \includegraphics[width = \textwidth]{../figures/gumpy.jpeg}\\
+  %\includegraphics[width = \textwidth]{../figures/gumpy.jpeg}\\
   ``But they that wait upon the Lord shall renew their strength; they shall mount up with wings as eagles; they shall run, and not be weary; and they shall walk, and not faint.'' \bibleverse{Isaiah}(40:31)
   \vspace*{\fill}
 \end{center}
@@ -136,8 +136,11 @@ I would like to thank Dr Kate Ren for her invaluable supervision throughout this
 \setcounter{tocdepth}{3}
 \tableofcontents
 
-\setcounter{tocdepth}{2}
+\setcounter{tocdepth}{3}
 \listoffigures
+
+\setcounter{tocdepth}{3}
+\listoftables
 
 \input{Chapters/background.tex}
 
