--- a/Thesis/titlepage.tex
+++ b/Thesis/titlepage.tex
@@ -16,7 +16,7 @@
         
         \vspace*{1.5cm}
         
-        School of Health and Related Research, \\
+        School of Mathematics and Statistics, \\
         The University of Sheffield, \\
         United Kingdom \\
 
@@ -26,7 +26,7 @@
 
         Septermber 2024 \\
 
-        Word Count: 12208\\
+        Word Count: 13825\\
 
         60 Credits \\
         
