--- a/Thesis/main.tex
+++ b/Thesis/main.tex
@@ -41,7 +41,6 @@
 \usepackage{bibleref}
 \usepackage{chemformula}
 \usepackage{fontspec, arabxetex}
-%\usepackage{lscape}
 \usepackage{pdflscape}
 \pagestyle{fancy}
 \usepackage[Bjarne]{fncychap}
@@ -55,11 +54,11 @@
 %Headers and Footers, thanks to Overleaf
 %https://www.overleaf.com/learn/latex/How_to_Write_a_Thesis_in_LaTeX_(Part_2):_Page_Layout
 \fancyhead{}
-\fancyhead[RO,LE]{\small Pancreatic Cancer NMA}
+\fancyhead[RO,LE]{\small A Network Meta-Analysis of Treatments for Locally Advanced/Metatstatic Pancreatic Cancer}
 \fancyfoot{}
 \fancyfoot[LE,RO]{\thepage}
 \fancyfoot[LO,CE]{Chapter \thechapter}
-\fancyfoot[CO,RE]{Matthew Knowles}
+\fancyfoot[CO,RE]{Matthew C. Knowles}
 
 \DeclarePairedDelimiter{\ceil}{\lceil}{\rceil}
 
