--- a/Presentation/pres.tex
+++ b/Presentation/pres.tex
@@ -83,7 +83,9 @@
 \end{frame} 
 
 \begin{frame}{ML-NMR Background}
-    
+    \begin{itemize}
+        \item 
+    \end{itemize}
 \end{frame}
 
 \begin{frame}{General ML-NMR Model}
