--- a/Presentation/pres.tex
+++ b/Presentation/pres.tex
@@ -15,7 +15,7 @@
 }
 
 
-\title{A Network Meta-Analysis for Treatments of Locally Advanced/Metastatic Pancreatic Cancer}
+\title{A Network Meta-Analysis of Treatments for Locally Advanced/Metastatic Pancreatic Cancer}
 \author{Matthew Knowles}
 \institute{University of Sheffield}
 \date{Autumn 2024}
